--- a/.github/workflows/ports_esp32.yml
+++ b/.github/workflows/ports_esp32.yml
@@ -21,21 +21,31 @@ jobs:
   build_idf402:
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v3
-    - name: Initialize lv_bindings submodule
-      run: git submodule update --init --recursive lib/lv_bindings
-    - name: Install packages
-      run: source tools/ci.sh && ci_esp32_idf402_setup
-    - name: Build
-      run: source tools/ci.sh && ci_esp32_build
+      - uses: actions/checkout@v3
+      - name: Initialize lv_bindings submodule
+        run: git submodule update --init --recursive lib/lv_bindings
+      - name: Install packages
+        run: source tools/ci.sh && ci_esp32_idf402_setup
+      - name: Build
+        run: source tools/ci.sh && ci_esp32_build
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-idf402-artifact
+          path: ./build/*.bin
 
   build_idf44:
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v3
-    - name: Initialize lv_bindings submodule
-      run: git submodule update --init --recursive lib/lv_bindings
-    - name: Install packages
-      run: source tools/ci.sh && ci_esp32_idf44_setup
-    - name: Build
-      run: source tools/ci.sh && ci_esp32_build
+      - uses: actions/checkout@v3
+      - name: Initialize lv_bindings submodule
+        run: git submodule update --init --recursive lib/lv_bindings
+      - name: Install packages
+        run: source tools/ci.sh && ci_esp32_idf44_setup
+      - name: Build
+        run: source tools/ci.sh && ci_esp32_build
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-idf44-artifact
+          path: ./build/*.bin
